[tool.poetry]
name = "grsdethw"
version = "0.1.0"
description = "Tests for cars.com using the Page Object Model"
authors = ["Jesse Wattenbarger <jesse.j.wattenbarger@gmail.com>"]
license = "GPL3"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
selenium-firefox = "^1.0.35"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"
isort = "^5.8.0"
flake8 = "^3.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
